--- a/src/components/Explore.astro
+++ b/src/components/Explore.astro
@@ -118,4 +118,18 @@ import data from '@data/resources.json'
   padding: 0.5rem 0.75rem;
   border-radius: 5px;
 }
+
+@media screen and (max-width: 1200px) {
+  .resource {
+    max-width: 30vw;
+    padding: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .resource {
+    max-width: 100vw;
+    padding: 4rem 6rem;
+  }
+}
 </style>
