--- a/src/components/Util/Blog.astro
+++ b/src/components/Util/Blog.astro
@@ -63,4 +63,21 @@ const blog = Astro.props.blog
 .blog:nth-of-type(even) {
   flex-direction: row-reverse;
 }
+
+@media screen and (max-width: 1200px) {
+  .blog.blog {
+    max-width: 60vw;
+    margin: 2rem 0;
+    padding: 2rem 0;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .blog.blog {
+    max-width: 100vw;
+    padding: 2rem 3rem;
+    margin: auto;
+  }
+}
 </style>
